<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_200"
    android:orientation="vertical"
    android:padding="30dp"
    >

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:background="@color/red"
        android:fontFamily="sans-serif-light"
        android:padding="10dp"
        android:text="@string/text1"
        android:textColor="@color/white"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/blue"
        android:fontFamily="sans-serif-light"
        android:padding="10dp"
        android:text="@string/text2"
        android:textColor="@color/white"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@color/black"
        android:fontFamily="sans-serif-light"
        android:padding="10dp"
        android:text="@string/text3"
        android:textColor="@color/white"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@color/black"
        android:fontFamily="sans-serif-light"
        android:padding="10dp"
        android:text="@string/text4"
        android:textColor="@color/white"
        android:textSize="35sp" />
</RelativeLayout>