<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:paddingHorizontal="25dp"
    android:scrollbarStyle="outsideOverlay"
    android:scrollbarThumbVertical="@color/purple_500">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="60dp">

        <ImageView
            android:id="@+id/signupUserImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/myicon"
            android:contentDescription="Logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/signupText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUpText"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/signupUserImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:layout_marginTop="30dp"
            android:id="@+id/signupNameInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/yourName"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="10dp"
            app:layout_constraintTop_toBottomOf="@id/signupText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="sans-serif"/>

        <EditText
            android:id="@+id/signupEmailInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/yourEmail"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            app:layout_constraintTop_toBottomOf="@id/signupNameInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="sans-serif"/>

        <EditText
            android:id="@+id/signupPhoneInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/yourPhone"
            android:inputType="numberDecimal"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="10dp"
            app:layout_constraintTop_toBottomOf="@id/signupEmailInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="sans-serif"/>

        <EditText
            android:id="@+id/signupPasswordInput"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:hint="@string/yourPassword"
            android:inputType="textPassword"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_password"
            app:layout_constraintTop_toBottomOf="@id/signupPhoneInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="sans-serif"
            />

        <TextView
            android:id="@+id/constraintGenderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genderText"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/signupPasswordInput"
            app:layout_constraintStart_toStartOf="parent"/>

        <RadioGroup
            android:id="@+id/constraintCheckBoxGenderContainer"
            android:layout_width="0dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/constraintGenderLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <RadioButton
                android:id="@+id/constraintRadioMale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/purple_500"
                android:text="@string/maleText"/>

            <RadioButton
                android:id="@+id/constraintRadioFemale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/purple_500"
                android:text="@string/female"/>

            <RadioButton
                android:id="@+id/constraintRadioOther"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/purple_500"
                android:text="Other"/>
        </RadioGroup>

        <TextView
            android:id="@+id/constraintCountryLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/CountryText"
            android:textAlignment="textStart"
            android:textColor="@color/gray"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraintCheckBoxGenderContainer"
            />

        <Spinner
            android:id="@+id/constraintCountrySpinner"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/black"
            android:entries="@array/country_list"
            android:hapticFeedbackEnabled="true"
            android:spinnerMode="dropdown"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraintCountryLabel"
            app:layout_constraintWidth_percent="0.6"
            />

        <LinearLayout
            android:id="@+id/loginRememberPasswordLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/constraintCountrySpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Remember me"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="italic" />
        </LinearLayout>

        <TextView
            android:id="@+id/constraintSportLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/sportText"
            android:textAlignment="textStart"
            android:textColor="@color/gray"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginRememberPasswordLayout"
            />

        <LinearLayout
            android:id="@+id/constraintCheckBoxContainerTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/constraintSportLabel"
            >

            <CheckBox
                android:id="@+id/constraintCheckBoxBootball"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/purple_500"
                android:text="@string/football"
                />

            <CheckBox
                android:id="@+id/constraintCheckBoxVolleyball"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/purple_500"
                android:text="@string/volleyball"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/constraintCheckBoxContainerSecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/constraintCheckBoxContainerTop"
            >

            <CheckBox
                android:id="@+id/constraintCheckBoxbasketBall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/purple_500"
                android:text="@string/basketball"
                />

            <CheckBox
                android:id="@+id/constraintCheckBoxBatmintion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/purple_500"
                android:text="@string/badminton"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/SignBtnWrap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/constraintCheckBoxContainerSecond"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            >

            <Button
                android:id="@+id/signupButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue"
                android:text="Submit"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintWidth_max="320dp" />

            <Space
                android:layout_width="15dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/aboutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:text="About"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintWidth_max="320dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/signupNoAccountLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/SignBtnWrap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/signupNoAccountDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have an account?"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/signupNoAccountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign In"
                android:textColor="@color/blue"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
